Added registration form to register view, created layout for login and register, added validation to form input, created ErrorMessage and PrimaryButtonForm components

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@theme {
+    --color-brand-1: #182464;
+    --color-brand-2: #171D3A;
+    --color-brand-3: #0A208F;
+    --color-brand-4: #91A4FF;
+    --color-brand-5: #BCC7FF;
+    --color-brand-6: #E5E9FF;
+}
